NEXT-2466 - Use SCSS in component library

--- a/Resources/nuxt-component-library/assets/css/components/sidebar.scss
+++ b/Resources/nuxt-component-library/assets/css/components/sidebar.scss
@@ -16,7 +16,7 @@
     }
 
     .nav-tree--main-entry-headline {
-        padding: 20px 0px 8px 43px;
+        padding: 20px 0 8px 43px;
         font-size: 12px;
         line-height: 1;
         color: rgba(255, 255, 255, 0.5);
