--- a/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.scss
+++ b/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.scss
@@ -2,4 +2,9 @@
     .sw-product-stream-detail__condition_container .sw-card__content {
         padding: 0;
     }
+
+    .sw-product-stream-detail__open_modal_preview {
+        display: flex;
+        margin: auto auto 20px auto;
+    }
 }
