--- a/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.html.twig
+++ b/Resources/administration/src/app/component/form/sw-multi-select/sw-multi-select.html.twig
@@ -1,4 +1,4 @@
-{% block sw_mult_select %}
+{% block sw_multi_select %}
 <div class="sw-multi-select"
      :class="selectClasses"
      tabindex="0"
@@ -10,13 +10,13 @@
      @keydown.up.prevent="navigateUpResults"
      @keydown.down.prevent="navigateDownResults">
 
-    {% block sw_mult_select_label %}
+    {% block sw_multi_select_label %}
         <label v-if="getInlineSnippet(label)" :for="selectId" class="sw-multi-select__label">
             {{ getInlineSnippet(label) }}
         </label>
     {% endblock %}
 
-    {% block sw_mult_select_inner %}
+    {% block sw_multi_select_inner %}
         <div class="sw-multi-select__inner">
             <ul class="sw-multi-select__selections">
                 <li class="sw-multi-select__selection-item-holder"
@@ -24,10 +24,10 @@
                     :key="selection.id"
                     :data-id="selection.id">
 
-                    {% block sw_mult_select_selection_item %}
+                    {% block sw_multi_select_selection_item %}
                         <sw-label dismissAble @selected="changeDefaultItemId(selection.id)" @dismiss="remove(selection[keyProperty])">
                             <template>
-                                {% block sw_mult_select_selection_item_text %}
+                                {% block sw_multi_select_selection_item_text %}
                                     <span class="sw-multi-select__selection-item">
                                         <slot name="valueProperty" :item="selection">
                                             {{ getInlineSnippet(selection[valueProperty]) }}
@@ -42,9 +42,9 @@
                     {% endblock %}
                 </li>
 
-                {% block sw_mult_select_selection_load_more_item %}
+                {% block sw_multi_select_selection_load_more_item %}
                     <li class="sw-multi-select__load-more-list-item is--clickAble">
-                        {% block sw_mult_select_selection_load_more_item_button %}
+                        {% block sw_multi_select_selection_load_more_item_button %}
                             <sw-button v-if="invisibleValueCount > 0"
                                        class="sw-multi-select__load-more-list-item-button"
                                        @click="expandValues">
@@ -54,9 +54,9 @@
                     </li>
                 {% endblock %}
 
-                {% block sw_mult_select_list_item_input %}
+                {% block sw_multi_select_list_item_input %}
                     <li class="sw-multi-select__selection-item-input" key="listInput">
-                        {% block sw_mult_select_input %}
+                        {% block sw_multi_select_input %}
                         <input ref="swSelectInput"
                                class="sw-multi-select__input"
                                type="text"
@@ -70,13 +70,13 @@
                 {% endblock %}
             </ul>
 
-            {% block sw_mult_select_indicators %}
+            {% block sw_multi_select_indicators %}
                 <div class="sw-multi-select__indicators">
-                    {% block sw_mult_select_indicators_loader %}
+                    {% block sw_multi_select_indicators_loader %}
                         <sw-loader class="sw-multi-select__indicator" v-if="isLoading" size="16px"></sw-loader>
                     {% endblock %}
 
-                    {% block sw_mult_select_indicators_helptext %}
+                    {% block sw_multi_select_indicators_helptext %}
                         <sw-help-text v-if="getInlineSnippet(helpText)"
                                       class="sw-multi-select__indicator"
                                       :text="getInlineSnippet(helpText)">
@@ -85,20 +85,20 @@
                 </div>
             {% endblock %}
 
-            {% block sw_mult_select_results_transition %}
+            {% block sw_multi_select_results_transition %}
                 <transition name="sw-multi-select-fade-down">
-                    {% block sw_mult_select_results %}
+                    {% block sw_multi_select_results %}
                         <div @scroll="onScroll" class="sw-multi-select__results" v-if="isExpanded">
-                            {% block sw_mult_select_results_list %}
+                            {% block sw_multi_select_results_list %}
                                 <ul class="sw-multi-select__results-list">
-                                    {% block sw_mult_select_results_list_before %}
+                                    {% block sw_multi_select_results_list_before %}
                                         <slot name="sw_multi_select_list_before"></slot>
                                     {% endblock %}
 
-                                    {% block sw_mult_select_results_list_item %}
+                                    {% block sw_multi_select_results_list_item %}
                                         <template v-for="(item, index) in currentOptions">
                                             <slot name="result_items" :item="item" :index="index">
-                                                {% block sw_mult_select_results_list_item_slot %}
+                                                {% block sw_multi_select_results_list_item_slot %}
                                                     <sw-multi-select-option ref="swSelectOption" :index="index" :item="item">
                                                         <slot name="valueProperty" :item="item">
                                                             <span v-html="getInlineSnippet(item[valueProperty])">
@@ -111,19 +111,19 @@
                                         </template>
                                     {% endblock %}
 
-                                    {% block sw_mult_select_results_list_after %}
+                                    {% block sw_multi_select_results_list_after %}
                                         <slot name="sw_multi_select_list_after"></slot>
                                     {% endblock %}
                                 </ul>
                             {% endblock %}
 
-                            {% block sw_mult_select_results_empty %}
+                            {% block sw_multi_select_results_empty %}
                                 <div v-if="currentOptions.length <= 0 && !isLoading" class="sw-multi-select__results-empty-message">
-                                    {% block sw_mult_select_results_empty_icon %}
+                                    {% block sw_multi_select_results_empty_icon %}
                                         <sw-icon name="default-action-search" size="20px"></sw-icon>
                                     {% endblock %}
 
-                                    {% block sw_mult_select_results_empty_text %}
+                                    {% block sw_multi_select_results_empty_text %}
                                         {{ $tc('global.sw-select.messageNoResults', searchTerm, { term: searchTerm }) }}
                                     {% endblock %}
                                 </div>
