--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-updates-grid/sw-plugin-updates-grid.html.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-updates-grid/sw-plugin-updates-grid.html.twig
@@ -53,7 +53,8 @@
                                     {% endblock %}
 
                                     {% block sw_plugin_updates_list_grid_columns_action %}
-                                        <sw-grid-column flex="minmax(100px, 140px)">
+                                        <sw-grid-column flex="minmax(100px, 140px)"
+                                                        align="right">
                                             {% block sw_plugin_updates_list_grid_columns_update %}
                                                 <div class="sw-plugin-updates-grid__update-context">
                                                     {% block sw_plugin_updates_list_grid_columns_update_button %}
@@ -83,6 +84,13 @@
                 {% block sw_plugin_updates_list_empty_state %}
                     <sw-empty-state v-if="!isLoading && !total"
                                     :title="$tc('sw-plugin.updates.messageEmpty')"></sw-empty-state>
+                {% endblock %}
+
+                {% block sw_plugin_updates_list_login_modal %}
+                    <sw-plugin-store-login v-if="showLoginModal"
+                                           @sw-plugin-store-login-abort="loginAbort"
+                                           @sw-plugin-store-login-success="loginSuccess">
+                    </sw-plugin-store-login>
                 {% endblock %}
             </sw-card>
         {% endblock %}
