--- a/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -104,7 +104,7 @@
                                         type="number"
                                         v-model="item.priceDefinition.price"
                                         slot="inline-edit"
-                                        :placeholder="0"
+                                        placeholder="0"
                                         :suffix="order.currency.symbol"
                                         :min="getMinItemPrice(item.id)"
                                         :max="getMaxItemPrice(item.id)">
@@ -124,7 +124,7 @@
                                     <sw-field type="number"
                                         v-model="item.quantity"
                                         slot="inline-edit"
-                                        placeholder="0"
+                                        placeholder=0
                                         :disabled="itemIsCredit(item.id)">
                                     </sw-field>
                                 {% endblock %}
@@ -145,13 +145,13 @@
                                 :editable="editable"
                                 :label="$tc('sw-order.detailBase.columnTax')">
                                 {% block sw_order_line_items_grid_columns_tax_label %}
-                                    {{ item.priceDefinition.taxRules[0].taxRate }} %
+                                    {{ item.type !== 'credit' ? item.priceDefinition.taxRules.elements[0].taxRate : item.price.taxRules.elements[0].taxRate }} %
                                 {% endblock %}
                                 {% block sw_order_line_items_grid_columns_tax_editor %}
                                     <sw-field type="number"
-                                        v-model="item.priceDefinition.taxRules[0].taxRate"
+                                        v-model=" item.type !== 'credit' ? item.priceDefinition.taxRules.elements[0].taxRate : item.price.taxRules.elements[0].taxRate"
                                         slot="inline-edit"
-                                        :placeholder="'0 %'"
+                                        placeholder="0 %"
                                         :disabled="itemCreatedFromProduct(item.id) || itemIsCredit(item.id)">
                                     </sw-field>
                                 {% endblock %}
