NEXT-2398 - Refactor all search bars

--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -7,7 +7,7 @@
                                :initialSearch="term"
                                typeSearchAlwaysInContainer
                                ref="searchBar"
-                               @search="this.onSearch">
+                               @search="onSearch">
                 </sw-search-bar>
             </template>
         {% endblock %}
