--- a/Resources/administration/src/module/sw-configuration/page/sw-configuration-list/sw-configuration-list.html.twig
+++ b/Resources/administration/src/module/sw-configuration/page/sw-configuration-list/sw-configuration-list.html.twig
@@ -3,7 +3,10 @@
 
         {% block sw_configuration_list_search_bar %}
             <template slot="search-bar">
-                <sw-search-bar :placeholder="$tc('sw-configuration.general.placeholderSearchBar')" :searchType="$tc('sw-configuration.general.mainMenuItemGeneral')" @search="this.onSearch" />
+                <sw-search-bar initialSearchType="configuration"
+                               :placeholder="$tc('sw-configuration.general.placeholderSearchBar')"
+                               @search="onSearch">
+                </sw-search-bar>
             </template>
         {% endblock %}
 
