--- a/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
@@ -5,7 +5,7 @@
             <template slot="search-bar">
                 <sw-search-bar initialSearchType="customer"
                                :initialSearch="term"
-                               @search="this.onSearch">
+                               @search="onSearch">
                 </sw-search-bar>
             </template>
         {% endblock %}
