--- a/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -4,7 +4,7 @@
             <template slot="search-bar">
                 <sw-search-bar initialSearchType="order"
                                :initialSearch="term"
-                               @search="this.onSearch">
+                               @search="onSearch">
                 </sw-search-bar>
             </template>
         {% endblock %}
