--- a/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
@@ -5,7 +5,7 @@
             <template slot="search-bar">
                 <sw-search-bar initialSearchType="product"
                                :initialSearch="term"
-                               @search="this.onSearch">
+                               @search="onSearch">
                 </sw-search-bar>
             </template>
         {% endblock %}
