--- a/Resources/administration/src/module/sw-settings-attribute/page/sw-settings-attribute-set-list/sw-settings-attribute-set-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-attribute/page/sw-settings-attribute-set-list/sw-settings-attribute-set-list.html.twig
@@ -2,9 +2,10 @@
     <sw-page class="sw-settings-attribute-set-list">
         {% block sw_settings_attribute_set_list_search_bar %}
             <template slot="search-bar">
-                <sw-search-bar :placeholder="$tc('sw-settings-attribute.general.placeholderSearchBar')"
-                               :searchType="$tc('sw-settings-attribute.general.mainMenuItemGeneral')"
-                               @search="this.onSearch">
+                <sw-search-bar initialSearchType="attribute"
+                               :placeholder="$tc('sw-settings-attribute.general.placeholderSearchBar')"
+                               :initialSearch="term"
+                               @search="onSearch">
                 </sw-search-bar>
             </template>
         {% endblock %}
