--- a/Resources/administration/src/module/sw-settings-privacy/page/sw-settings-privacy-index/sw-settings-privacy-index.html.twig
+++ b/Resources/administration/src/module/sw-settings-privacy/page/sw-settings-privacy-index/sw-settings-privacy-index.html.twig
@@ -3,8 +3,9 @@
 
         {% block sw_settings_privacy_index_search_bar %}
             <template slot="search-bar">
-                <sw-search-bar :placeholder="$tc('sw-settings-privacy.general.placeholderSearchBar')"
-                               :searchType="$tc('sw-settings-privacy.general.mainMenuItemGeneral')">
+                <sw-search-bar initialSearchType="privacy"
+                               :placeholder="$tc('sw-settings-privacy.general.placeholderSearchBar')"
+                               :initialSearch="term">
                 </sw-search-bar>
             </template>
         {% endblock %}
