--- a/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-list/sw-settings-rule-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-list/sw-settings-rule-list.html.twig
@@ -4,8 +4,9 @@
 
             {% block sw_settings_rule_list_search_bar %}
                 <template slot="search-bar">
-                    <sw-search-bar :placeholder="$tc('sw-settings-rule.general.placeholderSearchBar')"
-                                   :searchType="$tc('sw-settings-rule.general.mainMenuItemGeneral')"
+                    <sw-search-bar initialSearchType="rule"
+                                   :placeholder="$tc('sw-settings-rule.general.placeholderSearchBar')"
+                                   :initialSearch="term"
                                    @search="onSearch">
                     </sw-search-bar>
                 </template>
