--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-list/sw-settings-shipping-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-list/sw-settings-shipping-list.html.twig
@@ -4,9 +4,10 @@
 
             {% block sw_settings_shipping_list_search_bar %}
                 <template slot="search-bar">
-                    <sw-search-bar :placeholder="$tc('sw-settings-shipping.general.placeholderSearchBar')"
-                                   :searchType="$tc('sw-settings-shipping.general.mainMenuItemGeneral')"
-                                   @search="this.onSearch">
+                    <sw-search-bar initialSearchType="shipping_method"
+                                   :placeholder="$tc('sw-settings-shipping.general.placeholderSearchBar')"
+                                   :initialSearch="term"
+                                   @search="onSearch">
                     </sw-search-bar>
                 </template>
             {% endblock %}
