--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.html.twig
@@ -2,8 +2,9 @@
     <sw-page class="sw-settings-snippet-list">
         {% block sw_settings_snippet_set_list_search_bar %}
             <template slot="search-bar">
-                <sw-search-bar :placeholder="$tc('sw-settings-snippet.general.placeholderSearchBarSnippets')"
-                               :searchType="$tc('sw-settings-snippet.general.mainMenuItemGeneral')"
+                <sw-search-bar initialSearchType="snippet"
+                               :placeholder="$tc('sw-settings-snippet.general.placeholderSearchBarSnippets')"
+                               :initialSearch="term"
                                @search="onSearch">
                 </sw-search-bar>
             </template>
